--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<p>Scelerisque enim mi curae erat ultricies lobortis donec velit in per cum consectetur purus a enim platea vestibulum lacinia et elit ante scelerisque vestibulum. At urna condimentum sed vulputate a duis in senectus ullamcorper lacus cubilia consectetur odio proin sociosqu a parturient nam ac blandit praesent aptent. Eros dignissim mus mauris a natoque ad suspendisse nulla a urna in tincidunt tristique enim arcu litora scelerisque eros suspendisse.</p>
 						</div>
 						<footer>
-							<a href="generic.html" class="button alt">Tentang Kami</a>
+							<a href="about.html" class="button alt">Tentang Kami</a>
 						</footer>
 					</article>
 				</div>
@@ -128,7 +128,7 @@
 							<textarea name="body" id="message" rows="6" placeholder="Message"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
+							<li><input value="Kirim" class="button alt" type="submit"></li>
 						</ul>
 					</form>
 
