--- a/about.html
+++ b/about.html
@@ -53,12 +53,12 @@
 			<footer id="footer">
 				<div class="inner">
 
-					<h2>Contact Us</h2>
+					<h2>Kontak Kami</h2>
 
-					<form action="#" method="post">
+					<form action="mailto:rusnatan@gmail.com?Subject=Web%20Contact" method="post">
 
 						<div class="field half first">
-							<label for="name">Name</label>
+							<label for="name">Nama</label>
 							<input name="name" id="name" type="text" placeholder="Name">
 						</div>
 						<div class="field half">
@@ -66,13 +66,15 @@
 							<input name="email" id="email" type="email" placeholder="Email">
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
+							<label for="message">Pesan</label>
+							
+							<textarea name="body" id="message" rows="6" placeholder="Message"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
+							<li><input value="Kirim" class="button alt" type="submit"></li>
 						</ul>
 					</form>
+
 
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/PPIPARIS/" class="icon round fa-facebook"><span class="label">Facebook</span></a></li>
