--- a/about.html
+++ b/about.html
@@ -23,9 +23,11 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="news.html">News</a></li>
-					<li><a href="events.html">Upcoming Events</a></li>
+					<li><a href="about.html">Tentang Kami</a></li>
+					<li><a href="study.html">Studi di Paris</a></li>
+					<li><a href="live.html">Hidup di Paris</a></li>
+					<li><a href="event.html">Acara Mendatang</a></li>
+					<li><a href="news.html">Kabar</a></li>
 				</ul>
 			</nav>
 
