--- a/news.html
+++ b/news.html
@@ -23,9 +23,11 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="news.html">News</a></li>
-					<li><a href="event.html">Upcoming Events</a></li>
+					<li><a href="about.html">Tentang Kami</a></li>
+					<li><a href="study.html">Studi di Paris</a></li>
+					<li><a href="live.html">Hidup di Paris</a></li>
+					<li><a href="event.html">Acara Mendatang</a></li>
+					<li><a href="news.html">Kabar</a></li>
 				</ul>
 			</nav>
 
@@ -74,12 +76,12 @@
 			<footer id="footer">
 				<div class="inner">
 
-					<h2>Contact Us</h2>
+					<h2>Kontak Kami</h2>
 
-					<form action="#" method="post">
+					<form action="mailto:rusnatan@gmail.com?Subject=Web%20Contact" method="post">
 
 						<div class="field half first">
-							<label for="name">Name</label>
+							<label for="name">Nama</label>
 							<input name="name" id="name" type="text" placeholder="Name">
 						</div>
 						<div class="field half">
@@ -87,11 +89,12 @@
 							<input name="email" id="email" type="email" placeholder="Email">
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
+							<label for="message">Pesan</label>
+							
+							<textarea name="body" id="message" rows="6" placeholder="Message"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
+							<li><input value="Kirim" class="button alt" type="submit"></li>
 						</ul>
 					</form>
 
