--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>PPI Paris - Perhimpunan Pelajar Indonesia di Paris</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="images/logo.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
