--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PPI Paris - About Us</title>
+		<title>PPI Paris - Tentang Kami</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/logo.png">
@@ -25,10 +25,10 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">Tentang Kami</a></li>
-					<li><a href="event.html">Acara Mendatang</a></li>
-					<li><a href="news.html">Kabar</a></li>
-					<li><a href="study.html">Studi di Paris</a></li>
-					<li><a href="live.html">Hidup di Paris</a></li>
+					<li><a href="activity.html">Aktivitas</a></li>
+					<li><a href="service.html">Layanan Publik</a></li>
+					<li><a href="live.html">Tips Hidup di Paris</a></li>
+					<li><a href="contact.html">Kontak Kami</a></li>
 				</ul>
 			</nav>
 
@@ -38,15 +38,34 @@
 			to the full filename of your image. This is used in each section to set
 			the background image.
 		-->
-			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+			<section id="post" class="wrapper bg-img" data-bg="banner1.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Perhimpunan Pelajar Indonesia Paris</h2>
-							<p><i>since 19xx</i></p>
+							<h2>Tentang Kami</h2>
+							<p><i></i></p>
 						</header>
 						<div class="content">
-							<p>Perhimpunan Pelajar Indonesia (PPI) Paris adalah .....</p>
+							<p>PPI Paris merupakan organisasi pelajar Indonesia di Paris yang berbentuk Perhimpunan di lingkungan Kota Paris dan wilayah Île-de-France. Organisasi ini adalah Perhimpunan Pelajar Indonesia di Paris atau disingkat PPI Paris.</p> 
+							<p>PPI Paris secara operasional tunduk pada Loi du 1er juillet 1901 relative au contrat d'association dan perubahannya serta melandaskan kegiatannya pada nilai-nilai kemandirian, kejujuran, profesionalitas, tanggung jawab serta kekeluargaan yang menjunjung tinggi moralitas dan intelektualitas.</p> 
+							<p>PPI Paris telah ada secara de facto sejak 16 Januari 1958 dan dinyatakan berdiri secara de jure sejak melalui Anggaran Dasar yang dibuat pada tanggal 23 Mei 2016.</p>
+
+							<div id="kepengurusan" class="align-center">
+								<h3>Tim Kepengurusan</h3>
+									<img src="images/kepengurusan/struktur_pendidikan.jpeg" width="32%">
+									<img src="images/kepengurusan/struktur_komunikasi.jpeg" width="32%">
+									<img src="images/kepengurusan/struktur_budaya.jpeg" width="32%">
+								<BR>
+									<img src="images/kepengurusan/struktur_sektretariat.jpeg" width="32%">
+									<img src="images/kepengurusan/struktur_ketua.jpeg" width="32%">
+									<img src="images/kepengurusan/struktur_bamus.jpeg" width="32%">
+								<BR>
+									<img src="images/kepengurusan/struktur_olahraga.jpeg" width="32%">
+									<img src="images/kepengurusan/struktur_publikasi.jpeg" width="32%">
+									<img src="images/kepengurusan/struktur_kewiraus.jpeg" width="32%">
+
+							</div>
+
 						</div>
 					</article>
 				</div>
@@ -58,15 +77,11 @@
 
 					<h2>Kontak Kami</h2>
 
-					<form action="mailto:rusnatan@gmail.com?Subject=Web%20Contact" method="post">
+					<form action="mailto:humasppiparis@gmail.com?Subject=Web%20Contact" method="post">
 
 						<div class="field half first">
 							<label for="name">Nama</label>
 							<input name="name" id="name" type="text" placeholder="Name">
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input name="email" id="email" type="email" placeholder="Email">
 						</div>
 						<div class="field">
 							<label for="message">Pesan</label>
@@ -77,7 +92,6 @@
 							<li><input value="Kirim" class="button alt" type="submit"></li>
 						</ul>
 					</form>
-
 
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/PPIPARIS/" class="icon round fa-facebook"><span class="label">Facebook</span></a></li>
