--- a/activity.html
+++ b/activity.html
@@ -6,19 +6,17 @@
 -->
 <html>
 	<head>
-		<title>PPI Paris - Perhimpunan Pelajar Indonesia di Paris</title>
+		<title>PPI Paris - Aktivitas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/logo.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
+	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png"  height="130" width="130">
-				</div>
+			<header id="header" class="alt">
+				<div class="logo"><a href="index.html"><img src="images/logo.png" height="130" width="130"></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
 
@@ -34,39 +32,28 @@
 				</ul>
 			</nav>
 
-		<!-- Banner -->
+		<!-- Content -->
 		<!--
 			Note: To show a background image, set the "data-bg" attribute below
 			to the full filename of your image. This is used in each section to set
 			the background image.
 		-->
-			<section id="banner" class="bg-img" data-bg="homeppi.png">
-				<div class="inner">
-					<header>
-						<h1>Selamat Datang</h1>
-						<h1>di PPI Paris</h1>
-					</header>
-				</div>
-				<a href="#one" class="more">Learn More</a>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="wrapper post bg-img" data-bg="banner1.jpg">
+			<section id="post" class="wrapper bg-img" data-bg="banner4.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Tentang Kami</h2>
+							<h2>Aktivitas</h2>
 							<p><i></i></p>
 						</header>
 						<div class="content">
-							<p>PPI Paris merupakan organisasi pelajar Indonesia di Paris yang berbentuk Perhimpunan di lingkungan Kota Paris dan wilayah Île-de-France. Organisasi ini adalah Perhimpunan Pelajar Indonesia di Paris atau disingkat PPI Paris.</p> 
-							<p>PPI Paris secara operasional tunduk pada Loi du 1er juillet 1901 relative au contrat d'association dan perubahannya serta melandaskan kegiatannya pada nilai-nilai kemandirian, kejujuran, profesionalitas, tanggung jawab serta kekeluargaan yang menjunjung tinggi moralitas dan intelektualitas.</p> 
-							<p>PPI Paris telah ada secara de facto sejak 16 Januari 1958 dan dinyatakan berdiri secara de jure sejak melalui Anggaran Dasar yang dibuat pada tanggal 23 Mei 2016.</p>
-							<a href="about.html#kepengurusan" class="button alt">Tim Kepengurusan</a>
+							<p>Ikuti kami di Facebook dan Instagram untuk mengetahui informasi dan acara terbaru!</p>
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/PPIPARIS/" class="icon round fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/ppiparis/" class="icon round fa-instagram"><span class="label">Instagram</span></a></li>
+							</ul>
 						</div>
 					</article>
 				</div>
-				<a href="#two" class="more">Learn More</a>
 			</section>
 
 		<!-- Footer -->
@@ -110,11 +97,10 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			
+
 			<script type = "text/javascript">
 				document.getElementById("year").innerHTML = new Date().getFullYear();
 			</script>
-
 
 	</body>
 </html>
