--- a/live.html
+++ b/live.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PPI Paris - News</title>
+		<title>PPI Paris - Tips</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/logo.png">
@@ -25,10 +25,10 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">Tentang Kami</a></li>
-					<li><a href="event.html">Acara Mendatang</a></li>
-					<li><a href="news.html">Kabar</a></li>
-					<li><a href="study.html">Studi di Paris</a></li>
-					<li><a href="live.html">Hidup di Paris</a></li>
+					<li><a href="activity.html">Aktivitas</a></li>
+					<li><a href="service.html">Layanan Publik</a></li>
+					<li><a href="live.html">Tips Hidup di Paris</a></li>
+					<li><a href="contact.html">Kontak Kami</a></li>
 				</ul>
 			</nav>
 
@@ -38,12 +38,12 @@
 			to the full filename of your image. This is used in each section to set
 			the background image.
 		-->
-			<section id="post" class="wrapper bg-img" data-bg="banner3.jpg">
+			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
 							<h2>AKOMODASI DAN BIAYA HIDUP DI PRANCIS</h2>
-							<p>07.05.2020</p>
+							<p></p>
 						</header>
 						<div class="content">
 							<p>
@@ -112,7 +112,7 @@
 								<i> 
 									PPI Paris membuka kesempatan bagi mahasiswa Indonesia yang sedang menempuh studi di Prancis untuk menulis akrtikel ringan bisa berupa tips hidup, beasiswa, traveling, dll.
 									<br><br>
-									Artikel bisa dikirim ke alamat email: humas@ppiparis.fr 
+									Artikel bisa dikirim ke alamat email: humasppiparis@gmail.com 
 									<br>
 									dengan subjek : <b>PPI PARIS BERBAGI CERITA</b>
 									<br>
@@ -129,15 +129,11 @@
 
 					<h2>Kontak Kami</h2>
 
-					<form action="mailto:rusnatan@gmail.com?Subject=Web%20Contact" method="post">
+					<form action="mailto:humasppiparis@gmail.com?Subject=Web%20Contact" method="post">
 
 						<div class="field half first">
 							<label for="name">Nama</label>
 							<input name="name" id="name" type="text" placeholder="Name">
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input name="email" id="email" type="email" placeholder="Email">
 						</div>
 						<div class="field">
 							<label for="message">Pesan</label>
