--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PPI Paris - Perhimpunan Pelajar Indonesia di Paris</title>
+		<title>PPI Paris - Kontak Kami</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/logo.png">
@@ -34,45 +34,12 @@
 				</ul>
 			</nav>
 
-		<!-- Banner -->
-		<!--
-			Note: To show a background image, set the "data-bg" attribute below
-			to the full filename of your image. This is used in each section to set
-			the background image.
-		-->
-			<section id="banner" class="bg-img" data-bg="homeppi.png">
-				<div class="inner">
-					<header>
-						<h1>Selamat Datang</h1>
-						<h1>di PPI Paris</h1>
-					</header>
-				</div>
-				<a href="#one" class="more">Learn More</a>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="wrapper post bg-img" data-bg="banner1.jpg">
-				<div class="inner">
-					<article class="box">
-						<header>
-							<h2>Tentang Kami</h2>
-							<p><i></i></p>
-						</header>
-						<div class="content">
-							<p>PPI Paris merupakan organisasi pelajar Indonesia di Paris yang berbentuk Perhimpunan di lingkungan Kota Paris dan wilayah Île-de-France. Organisasi ini adalah Perhimpunan Pelajar Indonesia di Paris atau disingkat PPI Paris.</p> 
-							<p>PPI Paris secara operasional tunduk pada Loi du 1er juillet 1901 relative au contrat d'association dan perubahannya serta melandaskan kegiatannya pada nilai-nilai kemandirian, kejujuran, profesionalitas, tanggung jawab serta kekeluargaan yang menjunjung tinggi moralitas dan intelektualitas.</p> 
-							<p>PPI Paris telah ada secara de facto sejak 16 Januari 1958 dan dinyatakan berdiri secara de jure sejak melalui Anggaran Dasar yang dibuat pada tanggal 23 Mei 2016.</p>
-							<a href="about.html#kepengurusan" class="button alt">Tim Kepengurusan</a>
-						</div>
-					</article>
-				</div>
-				<a href="#two" class="more">Learn More</a>
-			</section>
-
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-
+					<article class="box">
+					
+					<br>
 					<h2>Kontak Kami</h2>
 
 					<form action="mailto:humasppiparis@gmail.com?Subject=Web%20Contact" method="post">
