--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PPI Paris - Event</title>
+		<title>PPI Paris - Layanan Publik</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/logo.png">
@@ -25,10 +25,10 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">Tentang Kami</a></li>
-					<li><a href="event.html">Acara Mendatang</a></li>
-					<li><a href="news.html">Kabar</a></li>
-					<li><a href="study.html">Studi di Paris</a></li>
-					<li><a href="live.html">Hidup di Paris</a></li>
+					<li><a href="activity.html">Aktivitas</a></li>
+					<li><a href="service.html">Layanan Publik</a></li>
+					<li><a href="live.html">Tips Hidup di Paris</a></li>
+					<li><a href="contact.html">Kontak Kami</a></li>
 				</ul>
 			</nav>
 
@@ -38,21 +38,67 @@
 			to the full filename of your image. This is used in each section to set
 			the background image.
 		-->
-			<section id="post" class="wrapper bg-img" data-bg="banner2.jpg">
+			<section id="post" class="wrapper bg-img" data-bg="banner3.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Poetlangue</h2>
-							<p>14.02.2020</p>
+							<h2>Layanan Publik</h2>
+							<p><i></i></p>
 						</header>
 						<div class="content">
-							<p>Ac pretium parturient et scelerisque dis pulvinar nascetur suspendisse justo parturient est quis adipiscing nisi dis eu ullamcorper. Penatibus aliquet vestibulum dis pretium a ullamcorper accumsan facilisis elit ullamcorper porttitor dictumst per a a potenti interdum fusce a adipiscing nostra ac parturient. Proin a imperdiet at a scelerisque quam et at ante aenean per per faucibus senectus lobortis mi tincidunt a penatibus. Mauris vestibulum aliquet parturient odio dapibus euismod a mi ullamcorper maecenas turpis non scelerisque nibh fermentum natoque erat parturient suspendisse a magna curabitur cum.</p>
+							<p></p>
+							
+							<p>
+								<b>PPI SIAGA</b>
+								<br>
+								Program jasa penjemputan dan pengantaran bagi pelajar baru yang akan menempuh pendidikan di kota Paris dari Bandara atau Stasiun ke tempat tujuan oleh anggota PPI Paris. Dengan maksud tersebut kami ingin mendata bagi seluruh anggota PPI Paris yang akan menjadi penjemput tersebut.
+								<br>
+								<i>Kontak a/n Ananda : +33 6 64 25 31 72</i>
+							</p>
 
-							<p>Aliquet a consectetur semper suscipit ridiculus mattis augue volutpat hendrerit proin hac vel tristique quis amet parturient sem. Adipiscing laoreet blandit vestibulum laoreet fermentum sed sociis lorem class ipsum scelerisque porttitor viverra vestibulum nascetur. Ad felis ad ullamcorper urna iaculis aenean vel a suspendisse nunc placerat euismod suspendisse et fames ipsum elementum odio vestibulum duis. Fringilla condimentum donec tincidunt enim volutpat nam velit quisque laoreet adipiscing nam in suspendisse mattis ad libero parturient scelerisque. Vitae enim ac parturient iaculis pharetra cum quam imperdiet commodo mus netus quam habitasse risus netus dis.</p>
+							<p>
+								<b>APPARTÉ</b>
+								<br>
+								Program penyewaan sementara tempat tinggal bagi pelajar indonesia yang berkunjung ke kota Paris dengan biaya terjangkau. Dengan maksud tersebut kami ingin mendata bagi seluruh anggota PPI Paris yang ingin menyewakan kamarnya.
+								<br>
+								<i>Kontak a/n Helena : +33 7 53 32 03 65</i>
+							</p>
+
+							<p>
+								<b>PPICK-Up</b>
+								<br>
+								Program jasa pengambilan dan pengantaran barang di sekitaran kota Paris dan sekitarnya yang dilakukan oleh anggota PPI Paris yang sudah di data sebelumnya. Dengan maksud tersebut kami ingin mendata bagi seluruh anggota PPI Paris yang ingin menjadi pengantar tersebut.
+								<br>
+								<i>Kontak a/n Alfredho : +33 6 80 15 97 35</i>
+							</p>
+
+							<p>
+								<b>Kegiatan Promosi Usaha</b>
+								<br>
+								Program mempromosikan usaha yang dijalankan oleh anggota PPI Paris di akun media sosial yang dimiliki oleh PPI Paris baik di bidang kuliner maupun jasa. Dengan maksud tersebut kami ingin mendata bagi seluruh anggota PPI Paris yang memiliki kegiatan usaha atau keahlian dibidangnya masing-masing untuk dapat kami hubungkan dengan seluruh pihak yang membutuhkan.
+								<br>
+								<i>Kontak a/n Alfredho : +33 6 80 15 97 35</i>
+							</p>
+
+							<p>
+								<b>PPI Paris Siaga COVID-19</b>
+								<br>
+								
+								<i>Hotline/Emergency Call</i>
+								<br>+33 755 97 95 04
+								<br>+33 755 85 41 32
+								<br><br>
+
+								<i>Hotline COVID-19 di Prancis</i>
+								<br>0 800 130 000
+								<br><br>
+
+								<i>Bagi WNI yang memerlukan bantuan darurat, hubungi:</i>
+								<br>KBRI Paris +33 6 21 12 21 09
+								<br>KJRI Marseille +33 6 18 22 12 83 
+							</p>
 
 						</div>
-						<footer>
-						</footer>
 					</article>
 				</div>
 			</section>
@@ -63,15 +109,11 @@
 
 					<h2>Kontak Kami</h2>
 
-					<form action="mailto:rusnatan@gmail.com?Subject=Web%20Contact" method="post">
+					<form action="mailto:humasppiparis@gmail.com?Subject=Web%20Contact" method="post">
 
 						<div class="field half first">
 							<label for="name">Nama</label>
 							<input name="name" id="name" type="text" placeholder="Name">
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input name="email" id="email" type="email" placeholder="Email">
 						</div>
 						<div class="field">
 							<label for="message">Pesan</label>
